--- a/views/atendente/index.ejs
+++ b/views/atendente/index.ejs
@@ -7,9 +7,12 @@
     <title>Listagem dos Atendentes</title>
 </head>
 <body>
+    <center>
     <h1>Listagem de Atendentes</h1>
     <p>
-        <a href="/atendente/add">Adicionar</a>
+        <a href="/atendente/add">Cadastrar Atendente</a><br/>
+        <a href="/cliente/add">Cadastrar Cliente</a><br/>
+        <a href="/cliente">Listar Clientes</a>
     </p>
     <form method="post">
         <input type="text" name="pesquisar">
@@ -44,5 +47,6 @@
         </tr>
         <% }) %>
     </table>
+</center>
 </body>
 </html>
