--- a/views/cliente/add.ejs
+++ b/views/cliente/add.ejs
@@ -7,6 +7,8 @@
     <title>Adicionando Cliente</title>
 </head>
 <body>
+    <center>
+        <h2>Cadastro Cliente</h2>
     <form method="post">
         Nome: <input type="text" name="nome" 
             placeholder="Digite seu nome!"><br>
@@ -19,5 +21,6 @@
             
         <input type="submit" value="Enviar">
     </form>
+</center>
 </body>
 </html>
