--- a/views/cliente/index.ejs
+++ b/views/cliente/index.ejs
@@ -7,9 +7,12 @@
     <title>Listagem dos Clientes</title>
 </head>
 <body>
+    <center>
     <h1>Listagem de Clientes</h1>
-    <p>
-        <a href="/cliente/add">Adicionar</a>
+    <br>
+        <a href="/cliente/add">Cadastrar Cliente</a><br/>
+        <a href="/atendente/add">Adicionar Atendente</a><br/>
+        <a href="/atendente">Listar Atendente</a>
     </p>
     <form method="post">
         <input type="text" name="pesquisar">
@@ -41,5 +44,6 @@
         </tr>
         <% }) %>
     </table>
+</center>
 </body>
 </html>
