--- a/views/atendente/add.ejs
+++ b/views/atendente/add.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <center>
     <title>Adicionando Atendente</title>
 </head>
 <body>
+    <h2>Cadastre-se</h2>
     <form method="post" enctype="multipart/form-data">
         Nome: <input type="text" name="nome" 
             placeholder="Digite seu nome!"><br>
@@ -17,5 +19,6 @@
         Foto: <input type="file" name="foto"><br>
         <input type="submit" value="Enviar">
     </form>
+</center>
 </body>
 </html>
