--- a/views/atendente/edt.ejs
+++ b/views/atendente/edt.ejs
@@ -7,6 +7,8 @@
     <title>Editando Atendente</title>
 </head>
 <body>
+    <center>
+        <h>Edite o Cadastro Atendente</h>
     <form method="post" enctype="multipart/form-data">
         Nome: <input value="<%=atendente.nome%>" type="text" name="nome" 
             placeholder="Digite seu nome"><br>
@@ -18,5 +20,6 @@
             
         <input type="submit" value="Enviar">
     </form>
+</center>
 </body>
 </html>
